src/quickcontrols/basic/impl/qquickbasicbusyindicator_p.h
@@ -49,6 +49,7 @@ protected:
     QSGNode *updatePaintNode(QSGNode *oldNode, UpdatePaintNodeData *) override;
 
 private:
+    bool m_running = false;
     int m_elapsed = 0;
     QColor m_pen;
     QColor m_fill;
