tests/auto/quickcontrols/qquickmaterialstyle/data/tst_material.qml
@@ -1314,4 +1314,15 @@ TestCase {
         let headerItem = window.listView.headerItem
         compare(headerItem.Material.theme, Material.Dark)
     }
+
+    // QTBUG-85860
+    function test_busyIndicatorRunningChangedQuickly() {
+        let busyIndicator = createTemporaryObject(busyIndicatorComponent, testCase)
+        verify(busyIndicator)
+
+        busyIndicator.running = false
+        busyIndicator.running = true
+
+        tryCompare(busyIndicator.contentItem, "visible", true)
+    }
 }
